--- a/todo.txt
+++ b/todo.txt
@@ -17,3 +17,7 @@ practice the memory part with postgres and then Implement it in the defer agent'
 
 
 wiring of defer agent remains, can be done easily
+for the draft and calendar agent the llm calling is completed but the actual action part like sending via gmail api and logging in calndar using calendar api remain.
+This is will be done in parent graph starting tommorow
+
+Start the parent graph
