--- a/testing.ipynb
+++ b/testing.ipynb
@@ -26,21 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "c052d81f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "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\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "print(os.getenv(\"OPENROUTER_API_KEY\"))"
+    "import os\n"
    ]
   },
   {
